Removed horizontal scrollbar issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,7 @@ p {
 
 nav {
   font-size: 16pt;
+  width:100%;
 }
 
 ul {
@@ -79,7 +80,7 @@ html {
 #particles {
   position: absolute;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -2;
 }
